change maven compiler to 11